--- a/10.md
+++ b/10.md
@@ -2,7 +2,32 @@
 
 ## Introduction
 
-"Never trust, always verify" - that's Zero Trust! Let's explore how IAM makes this possible in the cloud, where the traditional security perimeter no longer exists.
+# Zero Trust Architecture: How does Identity & Access Management (IAM) enforce it in the cloud?
+
+## Introduction
+
+Good morning everyone! Today I want to talk about a fundamental shift in security thinking called Zero Trust. The old saying was "trust but verify." The new mantra is "never trust, always verify." Let me explain how IAM makes this possible in the cloud.
+
+## Understanding Zero Trust
+
+In the old days, security was like a castle with a moat. Once you got past the gate (the firewall), you could access everything inside. The problem? If a hacker got in - maybe through a stolen password or a phishing email - they had free rein over everything.
+
+Zero Trust changes this completely. It says: Don't trust anyone or anything by default, even if they're already inside your network. Every single request, every single time, must be verified. It's like having security checkpoints everywhere, not just at the entrance.
+
+```mermaid
+graph TB
+    subgraph "Zero Trust Model"
+        A[Every Request] --> B[Verify Identity]
+        B --> C{Authorized?}
+        C -->|Yes| D{Right Context?}
+        C -->|No| F[Deny Access]
+        D -->|Yes| E[Grant Minimal Access]
+        D -->|No| F
+        F --> G[Monitor Continuously]
+    end
+```
+
+*This diagram shows the Zero Trust flow: every request goes through identity verification, then authorization check, then context validation (device, location, time). Only if all checks pass does the system grant minimal necessary access, and monitoring continues throughout.*
 
 ## Understanding Zero Trust
 
@@ -22,81 +47,17 @@ graph TB
 
 **Real Example:** Target breach (2013) - Hackers entered via HVAC vendor, accessed entire network, stole 40M credit cards.
 
-### The New Way: Zero Trust
-
-```mermaid
-graph TB
-    subgraph "Zero Trust Model"
-        A[Every Request] --> B[Verify Identity]
-        B --> C[Check Device Health]
-        C --> D[Verify Location]
-        D --> E[Check Permissions]
-        E --> F[Allow Minimal Access]
-        F --> G[Monitor Continuously]
-    end
-```
-
-**Principle:** "Never trust, always verify" - even if you're already inside!
-
-## Core Principles of Zero Trust
-
-### 1. **Verify Explicitly**
-
-Always authenticate and authorize based on:
-- ✅ Who you are (identity)
-- ✅ What device you're using
-- ✅ Where you're connecting from
-- ✅ What you're trying to access
-- ✅ When you're accessing it
-
-### 2. **Least Privilege Access**
-
-Give users the **minimum** permissions they need, nothing more!
-
-```mermaid
-graph LR
-    A[Developer] -->|Needs| B[Read Code]
-    A -->|Gets| B
-    A -->|Doesn't Need| C[Delete Production DB]
-    A -.->|Denied| C
-```
-
-### 3. **Assume Breach**
-
-Act like attackers are already inside! Limit blast radius.
-
-```mermaid
-graph TB
-    A[Compromised Account] --> B[Limited Access]
-    B --> C[Can only access App Dev]
-    B -.->|Blocked| D[Cannot access Prod DB]
-    B -.->|Blocked| E[Cannot access Finance]
-    B -.->|Blocked| F[Cannot access HR Data]
-```
-
-## What is IAM (Identity & Access Management)?
-
-IAM is the **gatekeeper** of your cloud resources. It manages:
-- **Who** can access what (authentication)
-- **What** they can do (authorization)
-- **When** and **how** they can do it (policies)
-
-```mermaid
-graph TB
-    A[IAM] --> B[Users]
-    A --> C[Groups]
-    A --> D[Roles]
-    A --> E[Policies]
-    
-    B --> F[Individual identities]
-    C --> G[Collection of users]
-    D --> H[Assumed by services]
-    E --> I[Permissions definitions]
-```
+*This diagram shows the Zero Trust flow: every request goes through identity verification, then authorization check, then context validation (device, location, time). Only if all checks pass does the system grant minimal necessary access, and monitoring continues throughout.*
 
 ## How IAM Enforces Zero Trust
 
-### 1. **Identity Verification (Authentication)**
+Now let me explain how Identity and Access Management - IAM - actually makes Zero Trust work in practice.
+
+### First: Multi-Factor Authentication
+
+IAM enforces that you prove who you are using multiple factors. Password alone isn't enough - that's just something you know. You also need something you have, like your phone, or something you are, like your fingerprint.
+
+This means even if a hacker steals your password, they can't get in without also having your phone. It's like needing both a key AND a fingerprint scan to open a vault.
 
 ```mermaid
 graph LR
@@ -111,18 +72,50 @@ graph LR
     F -->|No| H[Access Denied]
 ```
 
-**Multi-Factor Authentication (MFA):**
-- Something you **know** (password)
-- Something you **have** (phone, security key)
-- Something you **are** (fingerprint, face)
+*This diagram shows the MFA process: users must provide multiple forms of authentication - password (what you know), phone code (what you have), and potentially biometric (what you are). Only when all factors are validated is access granted.*
 
-**Real Example:** AWS requires MFA for root account access to production.
+### Second: Least Privilege Access
 
-### 2. **Least Privilege via Policies**
+IAM implements the principle of least privilege - give people only the minimum permissions they absolutely need. A developer might need to read code and deploy to the development environment, but they definitely don't need the ability to delete the production database!
 
-IAM policies define **exactly** what actions are allowed:
+This is enforced through policies that explicitly define what actions are allowed on which resources. If it's not explicitly allowed, it's denied.
 
-```json
+```mermaid
+graph LR
+    A[Developer] -->|Needs| B[Read Code]
+    A -->|Gets| B
+    A -->|Doesn't Need| C[Delete Production DB]
+    A -.->|Denied| C
+```
+
+*This diagram illustrates least privilege: developers get exactly what they need (read code access) but are denied dangerous permissions they don't need (like deleting production databases).*
+
+### Third: Continuous Monitoring
+
+Here's the crucial part - IAM doesn't just verify you once and forget about it. It logs every single action you take. Who accessed what, when, from where, and what they did with it. If something suspicious happens - like someone accessing data at 3 AM from a different country - alerts go off immediately.
+
+```mermaid
+graph TB
+    A[Compromised Account] --> B[Limited Access]
+    B --> C[Can only access App Dev]
+    B -.->|Blocked| D[Cannot access Prod DB]
+    B -.->|Blocked| E[Cannot access Finance]
+    B -.->|Blocked| F[Cannot access HR Data]
+```
+
+*This diagram shows damage limitation: even if an account is compromised, Zero Trust with IAM ensures the attacker can only access what that specific account is permitted to access - limiting the "blast radius" of the breach.*
+
+## My Final Advice
+
+Here's what you need to remember: Zero Trust isn't just a buzzword - it's a fundamental rethinking of security for the cloud era. And IAM is the tool that makes it real.
+
+Enable multi-factor authentication everywhere. Give users only the permissions they absolutely need. Log and monitor everything. Treat every request as suspicious until proven otherwise.
+
+The old perimeter-based security is dead. Zero Trust with IAM is the future, and frankly, the present. Implement it today to protect your cloud resources. Thank you!
+
+---
+
+## Learning Resources
 {
   "Version": "2012-10-17",
   "Statement": [
