--- a/11.md
+++ b/11.md
@@ -2,26 +2,13 @@
 
 ## Introduction
 
-When a data breach happens in the cloud, fingers start pointing. "It's the cloud provider's fault!" or "No, the customer didn't secure their data!" The truth? It's complicated. Let's break down the **Shared Responsibility Model**.
+Good morning everyone! When a data breach happens in the cloud, everyone starts pointing fingers. "It's Amazon's fault!" "No, the customer didn't secure their data!" Today I'll explain who's really accountable using something called the Shared Responsibility Model.
 
-## The Shared Responsibility Model
+## Understanding Shared Responsibility
 
-Think of it like renting an apartment:
+Think of cloud security like renting an apartment. The building owner is responsible for the structure, the walls, the plumbing, the fire safety systems. But you, the tenant, are responsible for locking your door, securing your valuables, and not leaving the stove on.
 
-```mermaid
-graph TB
-    subgraph "Apartment Analogy"
-        A[Building Owner Responsible For] --> B[Structure]
-        A --> C[Utilities]
-        A --> D[Fire Safety Systems]
-        
-        E[Tenant Responsible For] --> F[Locking Doors]
-        E --> G[Personal Belongings]
-        E --> H[Not Starting Fires]
-    end
-```
-
-Similarly, in cloud security:
+Cloud security works the same way. The cloud provider secures the infrastructure - the physical data centers, the servers, the networking equipment. You secure everything you put IN that infrastructure - your data, your applications, your user accounts.
 
 ```mermaid
 graph TB
@@ -38,66 +25,7 @@ graph TB
     end
 ```
 
-## Security OF the Cloud (Provider's Responsibility)
-
-### What AWS/Azure/GCP Manages:
-
-**1. Physical Security**
-- Data center access control
-- Security cameras, guards
-- Biometric authentication
-- Fire suppression systems
-
-**2. Infrastructure Security**
-- Server hardware
-- Network infrastructure
-- Hypervisor layer
-- Power and cooling
-
-**3. Service Availability**
-- Uptime guarantees
-- Redundancy
-- Disaster recovery infrastructure
-- DDoS protection at infrastructure level
-
-```mermaid
-graph LR
-    A[Cloud Provider Zone] --> B[Physical Perimeter]
-    B --> C[Server Racks]
-    C --> D[Virtualization Layer]
-    D --> E[Network Infrastructure]
-    
-    F[Customer Cannot Access] -.-> B
-    F -.-> C
-    F -.-> D
-```
-
-**Example:** AWS manages the security of EC2 hypervisors. If there's a vulnerability in the virtualization layer, AWS patches it. You don't need to do anything.
-
-## Security IN the Cloud (Customer's Responsibility)
-
-### What YOU Must Manage:
-
-**1. Data Protection**
-- Encrypting data at rest
-- Encrypting data in transit
-- Data classification
-- Backup and recovery
-
-**2. Access Control**
-- IAM policies
-- User permissions
-- Password policies
-- Multi-factor authentication (MFA)
-
-**3. Application Security**
-- Code vulnerabilities
-- Security patches for OS
-- Application updates
-- Secure configurations
-
-**4. Network Security**
-- Firewall rules
+*This diagram shows the division: Cloud providers handle "security OF the cloud" - physical security, infrastructure, and hardware. Customers handle "security IN the cloud" - data encryption, access control, and application security. The line between them is clear but crucial to understand.*
 - Security groups
 - Network ACLs
 - VPN configurations
@@ -169,109 +97,17 @@ graph TB
 graph TD
     A[Capital One Breach] --> B{Analysis}
     B --> C[AWS Responsibility: 0%]
-    B --> D[Capital One: 100%]
-    
-    D --> E[Misconfigured WAF]
-    D --> F[Overly Permissive IAM]
-    D --> G[No Monitoring]
-    
-    C --> H[AWS Infrastructure: Secure ✅]
-```
+*This diagram shows the division: Cloud providers handle "security OF the cloud" - physical security, infrastructure, and hardware. Customers handle "security IN the cloud" - data encryption, access control, and application security. The line between them is clear but crucial to understand.*
 
-**Verdict:** Capital One's fault!
-- ❌ Misconfigured firewall (WAF)
-- ❌ EC2 instance had excessive IAM permissions
-- ❌ No proper monitoring/alerting
-- ✅ AWS infrastructure was secure
+## Who's Accountable for Breaches?
 
-**Accountability:** Capital One paid $80M fine + $190M in settlements
+Let me share a shocking statistic: Ninety-five percent of cloud security breaches are the customer's fault, not the cloud provider's. Let me explain why with a real example.
 
-### Case 2: S3 Bucket Leaks
+In 2019, Capital One suffered a massive breach - over 100 million customer records were stolen. Everyone immediately blamed Amazon Web Services. But when investigators looked deeper, they found the truth: Capital One had misconfigured their firewall, given excessive permissions to their servers, and failed to monitor for suspicious activity. AWS's infrastructure was perfectly secure - Capital One just didn't use it securely.
 
-**Common Scenario:** Company stores data in S3 with public access
+The verdict? Capital One paid $80 million in fines plus $190 million in settlements. AWS paid nothing, because they weren't at fault.
 
-```mermaid
-graph LR
-    A[Create S3 Bucket] --> B[Store Customer Data]
-    B --> C{Set Permissions}
-    C -->|Mistake| D[Public Read Access]
-    D --> E[Data Exposed to Internet]
-    E --> F[Breach!]
-```
-
-**Who's Fault?**
-- ❌ Customer set bucket to public
-- ❌ Customer didn't use encryption
-- ❌ Customer didn't monitor access
-- ✅ AWS provided security features
-- ✅ AWS warned about public buckets
-
-**Real Examples:**
-- **Accenture** - exposed 137GB of data (public S3)
-- **Verizon** - 14M customer records (public S3)
-- **Uber** - 57M records (stolen AWS credentials)
-
-**Verdict:** 100% customer responsibility!
-
-### Case 3: Cloud Provider Outage
-
-**Scenario:** AWS us-east-1 goes down
-
-```mermaid
-graph TD
-    A[AWS Outage] --> B{Impact}
-    B --> C[Services Unavailable]
-    B --> D[Data Still Secure]
-    
-    E[Provider Responsibility] --> F[Fix Infrastructure]
-    E --> G[Compensate SLA Credits]
-    
-    H[Customer Responsibility] --> I[Design for Availability]
-    H --> J[Multi-Region Setup]
-```
-
-**Accountability:**
-- ✅ AWS responsible for fixing infrastructure
-- ✅ AWS provides SLA credits for downtime
-- ❌ Customer responsible for high-availability design
-- ❌ Should have multi-region architecture
-
-## Who Is Accountable for Different Breach Types?
-
-```mermaid
-graph TB
-    A{Breach Type} --> B[Data Exposed by Public Bucket]
-    A --> C[Stolen Admin Credentials]
-    A --> D[SQL Injection Attack]
-    A --> E[Hypervisor Vulnerability]
-    A --> F[Data Center Physical Breach]
-    
-    B --> G[Customer: 100%]
-    C --> G
-    D --> G
-    E --> H[Provider: 100%]
-    F --> H
-```
-
-### Customer's Fault (90% of Breaches):
-
-✅ Misconfigured security groups  
-✅ Public S3 buckets  
-✅ Weak passwords, no MFA  
-✅ Stolen/exposed credentials  
-✅ Unpatched software  
-✅ SQL injection vulnerabilities  
-✅ No encryption enabled  
-✅ Poor access controls  
-
-### Provider's Fault (10% of Breaches):
-
-✅ Physical data center breach  
-✅ Hypervisor vulnerabilities  
-✅ Infrastructure-level attacks  
-✅ Insider threat from cloud employees  
-
-### The Reality:
+This happens constantly. Companies set their storage buckets to public by mistake, expose customer data, and then blame the cloud. But the cloud provider gave them all the security tools - they just didn't use them properly.
 
 ```mermaid
 pie title "Cloud Breach Attribution"
@@ -281,45 +117,23 @@ pie title "Cloud Breach Attribution"
     "Provider Issues" : 5
 ```
 
-**95% of cloud breaches are customer's fault!**
+*This pie chart reveals the reality: 70% of breaches come from customer misconfigurations, 15% from application bugs, 10% from stolen credentials - all customer responsibilities. Only 5% are actually the provider's fault. The data is clear: customers are accountable for the vast majority of breaches.*
 
-## The Legal Reality
+## The Bottom Line
 
-### Who Gets Sued?
+Here's what you need to understand: When you move to the cloud, you're not outsourcing security - you're sharing it. The provider secures the infrastructure, but YOU must secure your data, your applications, and your user access.
 
-When a breach happens:
+If there's a breach because someone broke into the data center, that's on the provider. If there's a breach because you left your data publicly accessible or used weak passwords, that's on you. And legally, you're the one who gets sued and fined, not the cloud provider.
 
-```mermaid
-graph LR
-    A[Data Breach] --> B[Customers File Lawsuits]
-    B --> C[Company Using Cloud]
-    
-    D[Regulators Fine] --> E[Company Using Cloud]
-    
-    F[Cloud Provider] -.->|Rarely Sued| G[Usually Protected by ToS]
-```
+## My Final Advice
 
-**Legal Accountability:**
-- 🎯 **Company is accountable** to customers/regulators
-- 🎯 Provider may help investigate, but not liable
-- 🎯 Terms of Service protect providers
+Here's my recommendation: Stop thinking "the cloud" will automatically secure everything. Take responsibility for your part. Enable encryption, implement strong access controls, use multi-factor authentication, monitor everything, and conduct regular security audits.
 
-**Example:** In Capital One breach:
-- Capital One paid fines
-- AWS was not fined
-- Customers sued Capital One, not AWS
+The shared responsibility model isn't just a concept - it's a legal and practical reality. Understand where your responsibility lies, and take it seriously. Because when something goes wrong, you're the one who'll be accountable. Thank you!
 
-## How to Protect Yourself
+---
 
-### Customer Checklist:
-
-```mermaid
-graph TB
-    A[Security Best Practices] --> B[Enable Encryption]
-    A --> C[Implement IAM Properly]
-    A --> D[Use MFA Everywhere]
-    A --> E[Monitor & Log Everything]
-    A --> F[Regular Security Audits]
+## Learning Resources
     A --> G[Patch & Update]
     A --> H[Network Segmentation]
     
